--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }] }
+{
+  "version": 2,
+  "builds": [{ "src": "./server.js", "use": "@now/node" }],
+  "routes": [
+    { "src": "/bot(.*)", "dest": "./server.js" },
+    { "src": "/", "dest": "./server.js" }
+  ]
+}
