fix: vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "version": 2,
-  "builds": [{ "src": "./server.js", "use": "@now/node" }],
+  "builds": [
+    {
+      "src": "./server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "src": "/bot(.*)", "dest": "./server.js" },
-    { "src": "/", "dest": "./server.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
