--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }] }
+{
+  "version": 2,
+  "routes": [
+    { "src": "/bot(.*)", "dest": "/telegramBot.js" },
+    { "src": "/bot(.*)", "dest": "/server.js" },
+    { "src": "/(.*)", "dest": "/server.js" }
+  ]
+}
