--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/bot(.*)", "dest": "/telegramBot.js" },
-    { "src": "/bot(.*)", "dest": "/server.js" },
-    { "src": "/(.*)", "dest": "/server.js" }
+    { "handle": "filesystem" },
+    { "src": "/bot/(.*)", "dest": "/src/module/telegramBot.js" },
+    { "src": "/tes", "dest": "/server.js" },
+    { "src": "/", "dest": "/server.js" }
   ]
 }
