fix: vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "./server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/bot/(.*)", "dest": "/src/module/telegramBot.js" },
-    { "src": "/tes", "dest": "/server.js" },
-    { "src": "/", "dest": "/server.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
