--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
+  "builds": [
+      {
+          "src": "index.js",
+          "use": "@now/node"
+      }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/bot/(.*)", "dest": "/src/module/telegramBot.js" },
-    { "src": "/bot/(.*)", "dest": "/server.js" },
-    { "src": "/", "dest": "/server.js" }
+      {
+          "src": "/(.*)",
+          "dest": "index.js"
+      }
   ]
 }
